feat: complete interactive UI dashboards for manager and customer portals